# hotel_management

./: CMakeLists.txt  README.md
config/: database.cfg
include/database/: BookingManager.h  CustomerManager.h  DatabaseConnection.h  RoomManager.h
include/models/: Booking.h  Customer.h  Room.h
include/ui/: BookingUI.h  CustomerUI.h  MainMenu.h  RoomUI.h
include/utils/: Authentication.h  InputValidation.h
sql/: create_tables.sql  seed_data.sql
src/: main.cpp
src/database/: BookingManager.cpp  CustomerManager.cpp  DatabaseConnection.cpp  RoomManager.cpp
src/models/: Booking.cpp  Customer.cpp  Room.cpp
src/ui/: BookingUI.cpp  CustomerUI.cpp  MainMenu.cpp  RoomUI.cpp
src/utils/: Authentication.cpp  InputValidation.cpp
